single ruser page from layout, grid in subreditt view, much more

--- a/client/home.jade
+++ b/client/home.jade
@@ -484,7 +484,7 @@ template(name='home2')
                     |news
                 .ui.large.link.selection.list.medscroll
                     each latest_posts
-                        a.item(href="/post/#{_id}/view")
+                        a.item(href="/p/#{_id}")
                             .header #{title}
                 
                 // .medscroll
