--- a/parts/profile/user_posts.jade
+++ b/parts/profile/user_posts.jade
@@ -5,9 +5,9 @@ template(name='user_posts')
     .scrolling
         each posts
             .ui.segment
-                a(href="/post/#{_id}/view") 
+                a(href="/p/#{_id}") 
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                a.ui.header(href="/post/#{_id}/view") 
+                a.ui.header(href="/p/#{_id}") 
                     |#{title}
                 +array_view key='location_tags' direct=true
                 +array_view key='time_tags' direct=true
