fix add doc route, grid mode in sub

--- a/client/reddit/subreddit.jade
+++ b/client/reddit/subreddit.jade
@@ -281,7 +281,7 @@ template(name='subreddit_doc_item')
                 +flat_sub_tag_selector
             if watson
                 +doc_emotion_small
-            a.ui.inline.header(href="/user/#{data.author}")
+            a.ui.inline.header(href="/ruser/#{data.author}")
                 |#{data.author}
     
 
