--- a/client/reddit/rpage.jade
+++ b/client/reddit/rpage.jade
@@ -138,7 +138,7 @@ template(name='rcomment')
     .ui.grid.call_watson_comment
         .sixteen.wide.column
             .ui.small.inline.header {{data.score}}
-            a.author.say(href="/user/#{data.author}") #{data.author}
+            a.author.say(href="/ruser/#{data.author}") #{data.author}
             span.metadata 
                 span.date {{ufrom data.created}}
                 +doc_emotion_small
@@ -153,7 +153,7 @@ template(name='rcomment')
                 each data.replies.data.children
                     .one.wide.column
                     .fifteen.wide.column
-                        a.author(href="/user/#{data.author}") #{data.author}
+                        a.author(href="/ruser/#{data.author}") #{data.author}
                         .pointer.content.say
                             |{{#markdown}} {{data.body}} {{/markdown}}
                             // .text.say #{data.score} #{data.body}
